[package]
name = "jiggleballs"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
hound = "3.5.1"
macroquad = { version = "0.4.4", features = ["audio"] }
merge = "0.1.0"
quad-rand = "0.2.1"
serde = {version = "1.0.192", features = ["derive"]}
toml = {version = "0.8.8", features = ["parse", "display"] }
